--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,4 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: "Build with Maven"
-        run: mvn -B formatter:validate install --file pom.xml -DskipTests=true
+        run: mvn install --file pom.xml -DskipTests=true
