--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,12 +26,10 @@ jobs:
         with:
           java-version: 21
 
-      - name: "Cache Maven packages"
+      - name: "Cache local Maven repository"
         uses: actions/cache@v2
         with:
-          path: |
-            ~/.m2/repository
-            ~/.m2/wrapper
+          path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
