--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: "Build with Maven"
-        run: mvn install --file pom.xml -DskipTests=true
+        run: mvn install --file pom.xml
