--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ quarkus.google.cloud.logging.resource.label.region=europe-west9
 quarkus.google.cloud.logging.structured.stack-trace.included=true
 quarkus.google.cloud.logging.gcp-tracing.enabled=false
 quarkus.google.cloud.logging.format=json
-quarkus.secrets.lemonsqueezy.signingsecret=${sm//lemonsqueezy-signingsecret}
+custom.secrets.lemonsqueezy.signingsecret=${sm//lemonsqueezy-signingsecret}
